gitops/core/fluxcd-addons/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluxcd-webhook
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - flux-webhook.nce.wtf
      secretName: flux-webhook-tls-secret
  rules:
    - host: flux-webhook.nce.wtf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
